force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Role_Name__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Role_Name__c</fullName>
    <description>Holds the role name, which is populated by a trigger when you use the Set Role lookup. Should be used in reporting on Booking by role, and displaying in the user interface, in lieu of the Set Role lookup.</description>
    <inlineHelpText>Holds the role name, which is populated by a trigger when you use the Set Role lookup. Should be used in reporting on Booking by role, and displaying in the user interface, in lieu of the Set Role lookup.</inlineHelpText>
    <label>Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>