force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Set_Function__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Set_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used in automation to allow the end user to choose the function, but does not hold the function ID forever. Due to record skew issues, this field will be erased. Use the Function_ID field to store the ID long term, and the Function_Name field to group on the function name.</description>
    <inlineHelpText>Use this field to search for and set a new function. This will overwrite the current function.</inlineHelpText>
    <label>Set Function</label>
    <referenceTo>TREX1__Function__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>