force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Set_Role__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Set_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used only to search for and select the staff role on a booking. This is used to set the ID field, which is used in all backend calculations, as well as the Role name on this booking for reporting.</description>
    <inlineHelpText>Used only to search for and select the staff role on a booking. This is used to set the ID field, which is used in all backend calculations, as well as the Role name on this booking for reporting. This will be erased.</inlineHelpText>
    <label>Set Role</label>
    <referenceTo>TREX1__Role__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>