force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Setup_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Setup_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the booking is setup maintenance booking.</description>
    <inlineHelpText>Indicates if the booking is setup maintenance booking.</inlineHelpText>
    <label>Setup Maintenance</label>
    <type>Checkbox</type>
</CustomField>