force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Setup_Notes__c</fullName>
    <description>Notes regarding setup.</description>
    <inlineHelpText>Notes regarding setup.</inlineHelpText>
    <label>Setup Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>