force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Setup_Time_Required__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Setup_Time_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time required to setup in minutes.</description>
    <inlineHelpText>Time required to setup in minutes.</inlineHelpText>
    <label>Setup Time Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>