force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Staff__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The staff member this booking is for.</description>
    <inlineHelpText>The staff member this booking is for.</inlineHelpText>
    <label>Staff</label>
    <referenceTo>TREX1__Staff__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>