force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Start_Time__c</fullName>
    <description>The start date and time of this booking.</description>
    <inlineHelpText>The start date and time of this booking.</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>