force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Start_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Start_Time_Block__c</fullName>
    <description>The start time of a booking, including any setup time</description>
    <formula>TREX1__Start_Time__c - (IF(ISNULL(TREX1__Setup_Time_Required__c), 0, TREX1__Setup_Time_Required__c) / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time Block</label>
    <type>DateTime</type>
</CustomField>