force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Status__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Status__c</fullName>
    <description>The status of this booking. These values are hardcoded in the system to different functionality, do not change.</description>
    <inlineHelpText>The status of this booking. These values are hardcoded in the system to different functionality, do not change.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Firmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>