force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Sync_Booking_To_Series__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Sync_Booking_To_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the rest of the booking in the series needs to be updated.</description>
    <inlineHelpText>Indicates the rest of the booking in the series needs to be updated.</inlineHelpText>
    <label>DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>