force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Tear_Down_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Tear_Down_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the booking is a teardown maintenance.</description>
    <inlineHelpText>Indicates if the booking is a teardown maintenance.</inlineHelpText>
    <label>Tear Down Maintenance</label>
    <type>Checkbox</type>
</CustomField>