force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Tear_Down_Notes__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Tear_Down_Notes__c</fullName>
    <description>Notes regarding tear down.</description>
    <inlineHelpText>Notes regarding tear down.</inlineHelpText>
    <label>Tear Down Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>