force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Tear_Down_Time_Required__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Tear_Down_Time_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tear down time required in minutes.</description>
    <inlineHelpText>Tear down time required in minutes.</inlineHelpText>
    <label>Tear Down Time Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>