force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Top_Level_Rental_Contract__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Top_Level_Rental_Contract__c</fullName>
    <description>Developer field that is always equal to the first RC in a series (i.e. not an addendum), if booking was added under an addendum this will be equal to the addendum&apos;s parent.</description>
    <formula>IF( ISBLANK(TREX1__Rental_Contract__r.TREX1__Parent_Rental_Contract__c), TREX1__Rental_Contract__c, TREX1__Rental_Contract__r.TREX1__Parent_Rental_Contract__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top_Level_Rental_Contract</label>
    <type>Text</type>
</CustomField>