force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Type__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Type__c</fullName>
    <description>Type of booking</description>
    <inlineHelpText>Type of booking</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>