force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Ultimate_Parent__c</fullName>
    <description>Returns the Id of the ultimate parent in the booking hierarchy.</description>
    <formula>If(IsBlank(TREX1__Parent_Booking__c),
Id,
If(IsBlank(TREX1__Parent_Booking__r.TREX1__Parent_Booking__c),
TREX1__Parent_Booking__c,
If(IsBlank(TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__c),
TREX1__Parent_Booking__r.TREX1__Parent_Booking__c,
If(IsBlank(TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__c),
TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__c,
TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__r.TREX1__Parent_Booking__c
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Id of the ultimate parent in the booking hierarchy.</inlineHelpText>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>