force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Update_Entire_Booking_Series__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Update_Entire_Booking_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates the all the bookings in the series with the current values of the booking.</description>
    <inlineHelpText>Updates the all the bookings in the series with the current values of the booking.</inlineHelpText>
    <label>DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>