force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Update_Only_Me__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Update_Only_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t apply changes to other booking in the series.</description>
    <inlineHelpText>Don&apos;t apply changes to other booking in the series.</inlineHelpText>
    <label>DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>