force-app/main/default/objects/TREX1__Booking__c/recordTypes/TREX1__Equipment.recordType-meta.xml
<RecordType>
    <fullName>TREX1__Equipment</fullName>
    <active>true</active>
    <description>Equipment bookings.</description>
    <label>Equipment</label>
</RecordType>