force-app/main/default/objects/TREX1__Booking__c/recordTypes/TREX1__Facility.recordType-meta.xml
<RecordType>
    <fullName>TREX1__Facility</fullName>
    <active>true</active>
    <description>For a facility booking.</description>
    <label>Facility</label>
</RecordType>