force-app/main/default/objects/TREX1__Booking__c/recordTypes/TREX1__Staff.recordType-meta.xml
<RecordType>
    <fullName>TREX1__Staff</fullName>
    <active>true</active>
    <description>For a staff booking.</description>
    <label>Staff</label>
</RecordType>