force-app/main/default/objects/TREX1__Booking__c/validationRules/Additional_Staff_Details_Input_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Staff_Details_Input_Invalid</fullName>
    <active>false</active>
    <description>If specifying a Number of Additional Staff Hours, Number of Instructors and Instructor Hourly Rate must be populated</description>
    <errorConditionFormula>AND(
 !ISBLANK( Number_of_Additional_Staff_Hours__c ),
 OR(
  ISBLANK( Number_of_Additional_Staff__c ),
  ISBLANK( Additional_Staff_Hourly_Rate__c )
 )
)</errorConditionFormula>
    <errorMessage>If specifying a Number of Instructor Hours, Number of Instructors and Instructor Hourly Rate must be populated</errorMessage>
</ValidationRule>