force-app/main/default/objects/TREX1__Booking__c/validationRules/Housekeeping_Details_Input_Is_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Housekeeping_Details_Input_Is_Invalid</fullName>
    <active>false</active>
    <description>If specifying a Number of Housekeeping Hours, Number of Housekeeping Staff and Housekeeping Hourly Rate must be populated</description>
    <errorConditionFormula>AND(
 !ISBLANK( Number_of_Housekeeping_Hours__c ),
 OR(
  ISBLANK( Number_of_Housekeeping_Staff__c ),
  ISBLANK( Housekeeping_Hourly_Rate__c )
 )
)</errorConditionFormula>
    <errorMessage>If specifying a Number of Housekeeping Hours, Number of Housekeeping Staff and Housekeeping Hourly Rate must be populated</errorMessage>
</ValidationRule>