force-app/main/default/objects/TREX1__Booking__c/validationRules/TREX1__Booking_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TREX1__Booking_Time_Validation</fullName>
    <active>false</active>
    <description>DEPRECATED, formula fields does not handle timezones correctly. Validation is happening in a trigger.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Booking end time must be greater than the booking start time.</errorMessage>
</ValidationRule>