force-app/main/default/objects/TREX1__Booking__c/listViews/DailyReservations.listView-meta.xml
<ListView>
    <fullName>DailyReservations</fullName>
    <columns>NAME</columns>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Start_Time__c</columns>
    <columns>TREX1__End_Time__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>TREX1__External_Notes__c</columns>
    <columns>TREX1__Setup_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TREX1__Start_Time__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Location_Name__c</field>
        <operation>equals</operation>
        <value>Upper East Side</value>
    </filters>
    <filters>
        <field>TREX1__Start_Time__c</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>TREX1__Facility__c</field>
        <operation>notContain</operation>
        <value>Pool</value>
    </filters>
    <label>DailyReservations - Upper East Side</label>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>