force-app/main/default/objects/TREX1__Booking__c/listViews/Member_Gym_Time.listView-meta.xml
<ListView>
    <fullName>Member_Gym_Time</fullName>
    <columns>NAME</columns>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>TREX1__Start_Time__c</columns>
    <columns>TREX1__End_Time__c</columns>
    <columns>TREX1__Conflict_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TREX1__Event_Name__c</field>
        <operation>equals</operation>
        <value>Member Gym Time</value>
    </filters>
    <label>Member Gym Time</label>
</ListView>