force-app/main/default/objects/TREX1__Booking__c/listViews/Public_Field_Hours_Next_60_Days.listView-meta.xml
<ListView>
    <fullName>Public_Field_Hours_Next_60_Days</fullName>
    <columns>NAME</columns>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>TREX1__Start_Time__c</columns>
    <columns>TREX1__End_Time__c</columns>
    <columns>TREX1__Conflict_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TREX1__Function_Name__c</field>
        <operation>equals</operation>
        <value>Public Field Hours</value>
    </filters>
    <filters>
        <field>TREX1__Start_Time__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <label>Public Field Hours (Next 60 Days)</label>
</ListView>