force-app/main/default/objects/TREX1__Booking__c/listViews/Search_by_Course_Option_Code.listView-meta.xml
<ListView>
    <fullName>Search_by_Course_Option_Code</fullName>
    <columns>OBJECT_ID</columns>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>Location_Name__c</columns>
    <columns>TREX1__Start_Time__c</columns>
    <columns>TREX1__End_Time__c</columns>
    <columns>TREX1__Course_Option__c</columns>
    <columns>TREX1__Conflict_Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TREX1__Booking__c.TREX1__Facility</value>
    </filters>
    <filters>
        <field>Course_Option_Code__c</field>
        <operation>equals</operation>
        <value>AQU.U22.WPSBX01</value>
    </filters>
    <label>Search by Course Option Code</label>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>