force-app/main/default/objects/TREX1__Booking__c/listViews/Today_s_Bookings_UES_Printable.listView-meta.xml
<ListView>
    <fullName>Today_s_Bookings_UES_Printable</fullName>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>TREX1__Start_Time_Block__c</columns>
    <columns>TREX1__End_Time_Block__c</columns>
    <columns>TREX1__Setup_Notes__c</columns>
    <columns>TREX1__Tear_Down_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Name__c</field>
        <operation>equals</operation>
        <value>Upper East Side</value>
    </filters>
    <filters>
        <field>TREX1__Start_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>TREX1__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Today&apos;s Bookings - UES - Printable</label>
</ListView>