force-app/main/default/objects/TREX1__Booking__c/listViews/UES_Meeting_Space_Bookings.listView-meta.xml
<ListView>
    <fullName>UES_Meeting_Space_Bookings</fullName>
    <columns>OBJECT_ID</columns>
    <columns>TREX1__Event_Name__c</columns>
    <columns>TREX1__Facility__c</columns>
    <columns>Location_Name__c</columns>
    <columns>TREX1__Start_Time__c</columns>
    <columns>TREX1__End_Time__c</columns>
    <columns>TREX1__Course_Option__c</columns>
    <columns>TREX1__Conflict_Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Name__c</field>
        <operation>equals</operation>
        <value>Upper East Side</value>
    </filters>
    <filters>
        <field>TREX1__Facility__c</field>
        <operation>contains</operation>
        <value>Conference,Blue,Studio</value>
    </filters>
    <filters>
        <field>TREX1__Start_Time__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <filters>
        <field>TREX1__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>UES Meeting Space Bookings</label>
</ListView>